small style fix